--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,4 +3,26 @@
 
 body{
     background-color: $red;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    color:white;
+    font-size:30px;
+    height:100vh;
+}
+
+h1 {
+    margin:10px;
+    color:white;
+    font-size:40px;
+    font-weight: 200;
+}
+
+img {
+    width: 100px;
+}
+
+footer {
+    display: none;
 }
